# tap-zammad

./: .gitignore  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_zammad/: client.py  paginators.py  streams.py  tap.py
tap_zammad/tests/: __init__.py  test_core.py
tests/: test_core.py
