[tool.poetry]
name = "tap-zammad"
version = "0.0.1"
description = "`tap-zammad` is a Singer tap for Zammad, built with the Meltano SDK for Singer Taps."
authors = ["Luis Ventura"]
keywords = [
    "ELT",
    "Zammad",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.8.1"
requests = "^2.25.1"
singer-sdk = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^22.12.0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_zammad"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-zammad = 'tap_zammad.tap:TapZammad.cli'
