[tool.poetry]
name = "tap-zammad"
version = "0.0.5"
description = "tap-zammad is a Singer tap for Zammad, built with the Meltano SDK for Singer Taps."
authors = ["Luis Ventura"]
keywords = [
    "ELT",
    "Zammad",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.8.1"
requests = "^2.25.1"
singer-sdk = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"
darglint = "^1.8.1"
black = "^23.1.0"
pyupgrade = "^3.3.1"
mypy = "^1.0.0"
isort = "^5.11.5"
types-requests = "^2.28.11.12"

[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_zammad"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-zammad = 'tap_zammad.tap:TapZammad.cli'
